force-app/main/default/objects/Account/fields/Account_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Inactive Site =  All ship to locations for this customer number in this territory are marked as inactive in Oracle, but there are ship to locations active in other territories.
Inactive Account = Inactive customer in Oracle.</inlineHelpText>
    <label>Account Inactive Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>