force-app/main/default/objects/Account/fields/Account_eMail__c.field-meta.xml
<CustomField>
    <fullName>Account_eMail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account eMail</label>
    <type>Email</type>
</CustomField>