force-app/main/default/objects/Account/fields/Account_Future_Practice__c.field-meta.xml
<CustomField>
    <fullName>Account_Future_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Future Practice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>012800000002AW5</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account Future Practice)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>