force-app/main/default/objects/Account/fields/Account_in_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Account_in_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field controls the setting of the Lead Type field during conversion for DN-CA record types. Its value must be set at &quot;unchecked&quot;.</description>
    <label>Account_in_Conversion</label>
    <type>Checkbox</type>
</CustomField>