force-app/main/default/objects/Account/fields/Account_Name_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Customer_Number__c</fullName>
    <formula>Name &amp; &quot; (&quot; &amp; Base_Customer_Number__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name/Customer Number</label>
    <type>Text</type>
</CustomField>