force-app/main/default/objects/Account/fields/Account_Picture_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Picture_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Picture Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>