force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF( RecordTypeId = &quot;012C0000000UlfO&quot; &amp;&amp;(TODAY()- Last_Invoice_Date__c &lt; 730), &quot;Customer&quot;,
      IF (RecordTypeId = &quot;012C0000000UlfO&quot; &amp;&amp; (TODAY()- Last_Invoice_Date__c &lt; 1460), &quot;Dormant Customer&quot;,&quot;Non-Customer&quot;
         )
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer = Purchased in the last 2 years
Dormant Customer = Purchased 2-4 years ago
Non-Customer = Purchased more than 4 years ago or has never purchased</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>