force-app/main/default/objects/Account/fields/Accountpotentieel__c.field-meta.xml
<CustomField>
    <fullName>Accountpotentieel__c</fullName>
    <inlineHelpText>Totaal van het verkoopspotentieel van alle concurrerende producten</inlineHelpText>
    <label>Accountpotentieel</label>
    <summarizedField>Verkoopspotentieel__c.Potentieel__c</summarizedField>
    <summaryForeignKey>Verkoopspotentieel__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>