force-app/main/default/objects/Account/fields/AccountRecord_Type_Hidden__c.field-meta.xml
<CustomField>
    <fullName>AccountRecord_Type_Hidden__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountRecord Type (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>