force-app/main/default/objects/Account/fields/AcctInactive__c.field-meta.xml
<CustomField>
    <fullName>AcctInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the Account is Active or Inactive</description>
    <label>AcctInactive</label>
    <type>Checkbox</type>
</CustomField>