force-app/main/default/objects/Account/fields/AcctInactiveSAPBW__c.field-meta.xml
<CustomField>
    <fullName>AcctInactiveSAPBW__c</fullName>
    <formula>If(AcctInactive__c==True,&apos;I&apos;,&apos;A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AcctInactiveSAPBW</label>
    <type>Text</type>
</CustomField>