force-app/main/default/objects/Account/fields/Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this is an active customer.</description>
    <inlineHelpText>Indicates if this is an active customer.</inlineHelpText>
    <label>Active Date</label>
    <type>Checkbox</type>
</CustomField>