force-app/main/default/objects/Account/fields/Activity_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Activity_Frequency__c</fullName>
    <description>This field is used for IS and to detect the frequency of activity at the account.</description>
    <inlineHelpText>For Inside Sales&apos; use. How often is there activity with this account?</inlineHelpText>
    <label>Activity Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>6 Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>