force-app/main/default/objects/Account/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/maps?q=&apos;+ BillingStreet +&apos;,&apos;+BillingCity+&apos;,&apos;+BillingState+&apos;,&apos;+BillingPostalCode+&apos;,&apos;+BillingCountry, BillingStreet +BR()+BillingCity + &quot;, &quot; + BillingState + &quot; &quot; + BillingPostalCode  + BR())</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>