force-app/main/default/objects/Account/fields/Advanced_Shipping_Notification_ASN_856__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Shipping_Notification_ASN_856__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Shipping Notification(ASN)(856)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>