force-app/main/default/objects/Account/fields/AI_Basic_Research_Index__c.field-meta.xml
<CustomField>
    <fullName>AI_Basic_Research_Index__c</fullName>
    <formula>2*IF( Mech_Test_Lab__c,6,0)+2*IF(Engr_School__c,6,0)+5*IF(of_Surgeons_Basic_Research__c=0,0,IF(of_Surgeons_Basic_Research__c&lt;=2,2,IF(of_Surgeons_Basic_Research__c&lt;=4,4,IF(of_Surgeons_Basic_Research__c&lt;=6,6,IF(of_Surgeons_Basic_Research__c&lt;=8,8,10)))))+5*IF(of_Basic_Res_Publications__c=0,0,IF(of_Basic_Res_Publications__c&lt;=25,2,IF(of_Basic_Res_Publications__c&lt;=50,4,IF(of_Basic_Res_Publications__c&lt;=75,6,IF(of_Basic_Res_Publications__c&lt;=100,8,10)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI Basic Research Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>