force-app/main/default/objects/Account/fields/AKA__c.field-meta.xml
<CustomField>
    <fullName>AKA__c</fullName>
    <description>DBA –DOING BUSINESS AS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AKA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>