force-app/main/default/objects/Account/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <description>Another email provided by the surgeon</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the surgeon&apos;s alternate email address</inlineHelpText>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>