force-app/main/default/objects/Account/fields/AM_US_Regions__c.field-meta.xml
<CustomField>
    <fullName>AM_US_Regions__c</fullName>
    <inlineHelpText>This field is used for Academic Institutions</inlineHelpText>
    <label>AM-US Regions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>