force-app/main/default/objects/Account/fields/Apr_CY_PY__c.field-meta.xml
<CustomField>
    <fullName>Apr_CY_PY__c</fullName>
    <formula>CY04_Apr__c - PY04_APR_LAST_YEAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apr CY-PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>