force-app/main/default/objects/Account/fields/Assistant_Info__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assistant Information</label>
    <type>TextArea</type>
</CustomField>