force-app/main/default/objects/Account/fields/Aug_CY_PY__c.field-meta.xml
<CustomField>
    <fullName>Aug_CY_PY__c</fullName>
    <formula>CY08_Aug__c - PY08_AUG_LAST_YEAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aug CY-PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>