force-app/main/default/objects/Account/fields/Awards_Honors_Patents__c.field-meta.xml
<CustomField>
    <fullName>Awards_Honors_Patents__c</fullName>
    <description>The awards, honors and patents given to this surgeon</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the earned awards, honors and patents received by  this surgeon</inlineHelpText>
    <label>Awards, Honors, Patents</label>
    <type>TextArea</type>
</CustomField>