force-app/main/default/objects/Account/fields/BA_Agreement__c.field-meta.xml
<CustomField>
    <fullName>BA_Agreement__c</fullName>
    <description>This field is used by the Reimbursement Hotline team.</description>
    <label>BA Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>