force-app/main/default/objects/Account/fields/BA_Agreement_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>BA_Agreement_Received_Date__c</fullName>
    <description>This field is used by the Reimbursement Hotline team.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BA Agreement Received Date</label>
    <type>Date</type>
</CustomField>