force-app/main/default/objects/Account/fields/BA_Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>BA_Agreement_Signed_Date__c</fullName>
    <description>This field is used by the Reimbursement Hotline Team.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BA Agreement Signed Date</label>
    <type>Date</type>
</CustomField>