force-app/main/default/objects/Account/fields/Base_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Base_Customer_Number__c</fullName>
    <formula>LEFT( Customer_Number__c , FIND(&quot;-&quot;, Customer_Number__c)-1)</formula>
    <label>Base Customer Number</label>
    <type>Text</type>
</CustomField>