force-app/main/default/objects/Account/fields/Base_number__c.field-meta.xml
<CustomField>
    <fullName>Base_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Base number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>