force-app/main/default/objects/Account/fields/BCG_Target__c.field-meta.xml
<CustomField>
    <fullName>BCG_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCG Target</label>
    <type>Checkbox</type>
</CustomField>