force-app/main/default/objects/Account/fields/Bh_test__c.field-meta.xml
<CustomField>
    <fullName>Bh_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bh test</label>
    <type>Checkbox</type>
</CustomField>