force-app/main/default/objects/Account/fields/BillingPOBox__c.field-meta.xml
<CustomField>
    <fullName>BillingPOBox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rechnungsanschrift Postfach</label>
    <length>30</length>
    <type>Text</type>
</CustomField>