force-app/main/default/objects/Account/fields/Biomet_Account__c.field-meta.xml
<CustomField>
    <fullName>Biomet_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Biomet Account Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>