force-app/main/default/objects/Account/fields/Biomet_Surgeon_ID__c.field-meta.xml
<CustomField>
    <fullName>Biomet_Surgeon_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Biomet Surgeon ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>