force-app/main/default/objects/Account/fields/BVPERSLSLY01__c.field-meta.xml
<CustomField>
    <fullName>BVPERSLSLY01__c</fullName>
    <label>PY01 - JAN LAST YEAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>