force-app/main/default/objects/Account/fields/BVPERSLSLY02__c.field-meta.xml
<CustomField>
    <fullName>BVPERSLSLY02__c</fullName>
    <label>PY02 - FEB LAST YEAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>