force-app/main/default/objects/Account/fields/BVPERSLSLY03__c.field-meta.xml
<CustomField>
    <fullName>BVPERSLSLY03__c</fullName>
    <label>PY03 - MAR LAST YEAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>