force-app/main/default/objects/Account/fields/BVPERSLSTY01__c.field-meta.xml
<CustomField>
    <fullName>BVPERSLSTY01__c</fullName>
    <label>CY01 - JAN THIS YEAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>