force-app/main/default/objects/Account/fields/BVPERSLSTY02__c.field-meta.xml
<CustomField>
    <fullName>BVPERSLSTY02__c</fullName>
    <label>CY02 - FEB THIS YEAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>