force-app/main/default/objects/Account/fields/BVPERSLSTY03__c.field-meta.xml
<CustomField>
    <fullName>BVPERSLSTY03__c</fullName>
    <label>CY03 - MAR THIS YEAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>