force-app/main/default/objects/Account/fields/Cap_Kit_Customer__c.field-meta.xml
<CustomField>
    <fullName>Cap_Kit_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cap Kit Customer</label>
    <type>Checkbox</type>
</CustomField>