force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF( ZB_Share__c  &gt;=  0.85, &quot;ZB Loyalist&quot;,
(IF( ZB_Share__c  &gt;=  0.15, &quot;Shared Account&quot;,
(IF( ZB_Share__c &lt; 0.15, &quot;Competitor Loyalist&quot;,null)))))</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>