force-app/main/default/objects/Account/fields/CCCustNo__c.field-meta.xml
<CustomField>
    <fullName>CCCustNo__c</fullName>
    <formula>&quot;000&quot; + MID(Customer_Number__c,5,6)</formula>
    <label>CCCustNo</label>
    <type>Text</type>
</CustomField>