force-app/main/default/objects/Account/fields/Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Class_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>