force-app/main/default/objects/Account/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>