force-app/main/default/objects/Account/fields/Closed_Account_Credits__c.field-meta.xml
<CustomField>
    <fullName>Closed_Account_Credits__c</fullName>
    <label>Closed Account Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>