force-app/main/default/objects/Account/fields/Coalition_Account__c.field-meta.xml
<CustomField>
    <fullName>Coalition_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coalition Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Coalition)</relationshipLabel>
    <relationshipName>Coalition_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>