force-app/main/default/objects/Account/fields/Competitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Type__c</fullName>
    <formula>IF(ISPICKVAL(Primary_Implant_Competitor__c , &apos;Astra&apos;), &quot;Premium&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Biohorizons&apos;), &quot;Premium&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Camlog&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Implant Direct&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Dentsply&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Keystone&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Nobel Biocare&apos;), &quot;Premium&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Straumann ITI&apos;), &quot;Premium&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Other&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Thommen&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Neodent&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;MIS&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;Hoissen&apos;), &quot;Value&quot;,
(IF(ISPICKVAL (Primary_Implant_Competitor__c, &apos;OsteoReady&apos;), &quot;Value&quot;,
null)))))))))))))))))))))))))))</formula>
    <label>Competitor Type</label>
    <type>Text</type>
</CustomField>