force-app/main/default/objects/Account/fields/Compliance_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Liaison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Liaison</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Compliance Liaison)</relationshipLabel>
    <relationshipName>Compliance_Liaison</relationshipName>
    <type>Lookup</type>
</CustomField>