force-app/main/default/objects/Account/fields/Concurrents_Implants__c.field-meta.xml
<CustomField>
    <fullName>Concurrents_Implants__c</fullName>
    <label>Concurrents Implants</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alpha Bio</fullName>
            </value>
            <value>
                <fullName>Anthogyr</fullName>
            </value>
            <value>
                <fullName>Biohorizons</fullName>
            </value>
            <value>
                <fullName>Biomet 3i</fullName>
            </value>
            <value>
                <fullName>Biotech</fullName>
            </value>
            <value>
                <fullName>Bredent</fullName>
            </value>
            <value>
                <fullName>Camlog</fullName>
            </value>
            <value>
                <fullName>Denstply implants - Astra</fullName>
            </value>
            <value>
                <fullName>Dentsply implants</fullName>
            </value>
            <value>
                <fullName>Easy implant</fullName>
            </value>
            <value>
                <fullName>Euroteknica</fullName>
            </value>
            <value>
                <fullName>Global D - Serf</fullName>
            </value>
            <value>
                <fullName>Global D - Tekka</fullName>
            </value>
            <value>
                <fullName>IDI</fullName>
            </value>
            <value>
                <fullName>Implant direct</fullName>
            </value>
            <value>
                <fullName>Keystone</fullName>
            </value>
            <value>
                <fullName>Medical Production</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>Nobel Biocare</fullName>
            </value>
            <value>
                <fullName>Straumann ITI</fullName>
            </value>
            <value>
                <fullName>Sweden &amp; Martina</fullName>
            </value>
            <value>
                <fullName>TBR</fullName>
            </value>
            <value>
                <fullName>Thommen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>