force-app/main/default/objects/Account/fields/Concurrents_Membranes__c.field-meta.xml
<CustomField>
    <fullName>Concurrents_Membranes__c</fullName>
    <label>Concurrents Membranes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bio-Gide (Geistlich)</fullName>
            </value>
            <value>
                <fullName>Collaguide (Curasan)</fullName>
            </value>
            <value>
                <fullName>Collprotect (Botiss)</fullName>
            </value>
            <value>
                <fullName>Conform (Ace)</fullName>
            </value>
            <value>
                <fullName>Creos xeno protect (Nobel)</fullName>
            </value>
            <value>
                <fullName>Cytoplast (Curasan)</fullName>
            </value>
            <value>
                <fullName>Cytoplast RTM (Osteogenics)</fullName>
            </value>
            <value>
                <fullName>Dynamatrix (Keystone)</fullName>
            </value>
            <value>
                <fullName>Epiguide (Curasan)</fullName>
            </value>
            <value>
                <fullName>Frios Boneshield (Dentsply)</fullName>
            </value>
            <value>
                <fullName>Jason (Botiss)</fullName>
            </value>
            <value>
                <fullName>Membragel (Straumann)</fullName>
            </value>
            <value>
                <fullName>Memlok (Biohorizon)</fullName>
            </value>
            <value>
                <fullName>Osseoguard (Biomet3i)</fullName>
            </value>
            <value>
                <fullName>Ossix Plus (Regedent)</fullName>
            </value>
            <value>
                <fullName>Remotis (Thommen)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>