force-app/main/default/objects/Account/fields/Concurrents_Regeneration_osseuse__c.field-meta.xml
<CustomField>
    <fullName>Concurrents_Regeneration_osseuse__c</fullName>
    <label>Concurrents Regeneration osseuse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biobank</fullName>
            </value>
            <value>
                <fullName>Biomup</fullName>
            </value>
            <value>
                <fullName>BioOss</fullName>
            </value>
            <value>
                <fullName>Cerabone</fullName>
            </value>
            <value>
                <fullName>Ceros</fullName>
            </value>
            <value>
                <fullName>Easygraft</fullName>
            </value>
            <value>
                <fullName>Emdogain</fullName>
            </value>
            <value>
                <fullName>Endobone</fullName>
            </value>
            <value>
                <fullName>Gen-Oss</fullName>
            </value>
            <value>
                <fullName>Kasios</fullName>
            </value>
            <value>
                <fullName>Ladec</fullName>
            </value>
            <value>
                <fullName>Osteobiol</fullName>
            </value>
            <value>
                <fullName>TBF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>