force-app/main/default/objects/Account/fields/Conditions_of_Payment_Text__c.field-meta.xml
<CustomField>
    <fullName>Conditions_of_Payment_Text__c</fullName>
    <formula>CASE( Conditions_of_Payment__c, &quot;Z006&quot;, &quot;innerhalb von 30 Tagen netto&quot;, &quot;Z010&quot;, &quot;innerhalb von 90 Tagen netto&quot;, &quot;Z015&quot;, &quot;innerhalb von 10 Tagen 2% Skonto&quot;, &quot;innerhalb von 30 Tagen netto&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zahlungsbedingungen</label>
    <type>Text</type>
</CustomField>