force-app/main/default/objects/Account/fields/Consigned_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Consigned_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consigned Inventory</label>
    <type>Checkbox</type>
</CustomField>