force-app/main/default/objects/Account/fields/Consignment_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Warehouse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consignment Warehouse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>