force-app/main/default/objects/Account/fields/Consulting_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Agreement__c</fullName>
    <description>Indicates whether a consulting agreement is in place with this surgeon and what type of agreement</description>
    <inlineHelpText>Check this box is a consulting agreement is in place with this surgeon</inlineHelpText>
    <label>Consulting Agreement?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PC Agrmnt.</fullName>
            </value>
            <value>
                <fullName>Royalty Agrmnt.</fullName>
            </value>
            <value>
                <fullName>SC Agrmnt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>