force-app/main/default/objects/Account/fields/Contact_Card_Filled_Out__c.field-meta.xml
<CustomField>
    <fullName>Contact_Card_Filled_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Card Filled Out</label>
    <type>Checkbox</type>
</CustomField>