force-app/main/default/objects/Account/fields/Credits_YTD__c.field-meta.xml
<CustomField>
    <fullName>Credits_YTD__c</fullName>
    <label>Credits YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>